--- a/src/components/ItemModal/ItemModal.css
+++ b/src/components/ItemModal/ItemModal.css
@@ -1,10 +1,3 @@
-.modal__content_type_image {
-  position: fixed;
-  align-items: center;
-  padding: 0;
-  border-radius: 16px;
-}
-
 .modal__image {
   width: 100%;
   border-top-left-radius: 16px;
