--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -53,6 +53,13 @@
   border-radius: 15px;
 }
 
+.modal__content_type_image {
+  position: fixed;
+  align-items: center;
+  padding: 0;
+  border-radius: 16px;
+}
+
 .modal__form {
   display: flex;
   flex-direction: column;
